@@ -1,6 +1,7 @@
 package store.novabook.gateway.filter;
 
 import java.security.Key;
+import java.util.Objects;
 
 import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
@@ -17,8 +18,8 @@ import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
 import lombok.extern.slf4j.Slf4j;
 import store.novabook.gateway.config.JWTUtil;
+import store.novabook.gateway.entity.AccessTokenInfo;
 import store.novabook.gateway.service.AuthService;
-import store.novabook.gateway.service.JWTTokenService;
 import store.novabook.gateway.util.KeyManagerUtil;
 import store.novabook.gateway.util.dto.JWTConfigDto;
 
@@ -27,13 +28,11 @@ import store.novabook.gateway.util.dto.JWTConfigDto;
 public class JwtAuthorizationHeaderFilter extends AbstractGatewayFilterFactory<JwtAuthorizationHeaderFilter.Config> {
 
 	private final JWTUtil jwtUtil;
-	private final JWTTokenService jwtTokenService;
 	private final AuthService authService;
 	private final JWTConfigDto jwtConfig;
 
-	public JwtAuthorizationHeaderFilter(JWTUtil jwtUtil, JWTTokenService jwtTokenService, AuthService authService, Environment env) {
+	public JwtAuthorizationHeaderFilter(JWTUtil jwtUtil, AuthService authService, Environment env) {
 		this.jwtUtil = jwtUtil;
-		this.jwtTokenService = jwtTokenService;
 		this.authService = authService;
 		this.jwtConfig = KeyManagerUtil.getJWTConfig(env);
 	}
@@ -45,60 +44,9 @@ public class JwtAuthorizationHeaderFilter extends AbstractGatewayFilterFactory<J
 	public GatewayFilter apply(Config config) {
 		return (exchange, chain) -> {
 
-			// ServerHttpRequest request = exchange.getRequest();
-			// if (!request.getHeaders().containsKey(HttpHeaders.AUTHORIZATION) && !request.getHeaders()
-			// 	.containsKey("Refresh")) {
-			// 	log.debug("No Authorization, Refresh header");
-			// } else {
-			//
-			// 	Key key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtConfig.secret()));
-			//
-			// 	try {
-			// 		String accessToken = "";
-			// 		if (request.getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) {
-			// 			accessToken = request.getHeaders().get(HttpHeaders.AUTHORIZATION).get(0).replace("Bearer ", "");
-			// 		} else {
-			// 			throw new ExpiredJwtException(null, null, "No Authorization header");
-			// 		}
-			//
-			// 		Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(accessToken);
-			//
-			// 		String username = jwtUtil.getUsername(accessToken);
-			// 		String role = jwtUtil.getRole(accessToken);
-			//
-			// 		if (!jwtTokenService.existsByUuid(username)) {
-			// 			exchange.getResponse().setStatusCode(HttpStatus.SEE_OTHER);
-			// 			return exchange.getResponse().setComplete();
-			// 		}
-			//
-			// 		exchange.mutate().request(builder -> {
-			// 			builder.header("X-USER-ID", username);
-			// 			builder.header("X-USER-ROLE", role);
-			// 		});
-			//
-			// 	} catch (ExpiredJwtException e) {
-			//
-			// 		exchange.getResponse().setStatusCode(HttpStatus.SEE_OTHER);
-			// 		return exchange.getResponse().setComplete();
-			//
-			// 	} catch (JwtException e) {
-			// 		exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-			//
-			// 		log.error("JwtException");
-			// 		return exchange.getResponse().setComplete();
-			// 	}
-			// }
-			//
-			// return chain.filter(exchange);
-
-
-
-
-
 			ServerHttpRequest request = exchange.getRequest();
-			if (!request.getHeaders().containsKey(HttpHeaders.AUTHORIZATION) && !request.getHeaders()
-				.containsKey("Refresh")) {
-				log.debug("No Authorization, Refresh header");
+			if (!request.getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) {
+				log.debug("No Authorization");
 			} else {
 
 				Key key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtConfig.secret()));
@@ -106,35 +54,35 @@ public class JwtAuthorizationHeaderFilter extends AbstractGatewayFilterFactory<J
 				try {
 					String accessToken = "";
 					if (request.getHeaders().containsKey(HttpHeaders.AUTHORIZATION)) {
-						accessToken = request.getHeaders().get(HttpHeaders.AUTHORIZATION).get(0).replace("Bearer ", "");
+						accessToken = Objects.requireNonNull(request.getHeaders().get(HttpHeaders.AUTHORIZATION))
+							.getFirst().replace("Bearer ", "");
 					} else {
-						throw new ExpiredJwtException(null, null, "No Authorization header");
+						throw new ExpiredJwtException(null, null, "No Authorization");
 					}
 
 					Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(accessToken);
 
-					String username = jwtUtil.getUsername(accessToken);
-					String role = jwtUtil.getRole(accessToken);
+					String uuid = jwtUtil.getUUID(accessToken);
 
-					if (!authService.existsByUuid(username)) {
+					AccessTokenInfo accessTokenInfo = authService.getAccessToken(uuid);
+
+					if (accessTokenInfo == null) {
 						exchange.getResponse().setStatusCode(HttpStatus.SEE_OTHER);
 						return exchange.getResponse().setComplete();
 					}
 
 					exchange.mutate().request(builder -> {
-						builder.header("X-USER-ID", username);
-						builder.header("X-USER-ROLE", role);
+						builder.header("X-USER-ID", Long.toString(accessTokenInfo.getMembersId()));
+						builder.header("X-USER-ROLE", accessTokenInfo.getRole());
 					});
 
 				} catch (ExpiredJwtException e) {
-
-					exchange.getResponse().setStatusCode(HttpStatus.SEE_OTHER);
-					return exchange.getResponse().setComplete();
-
-				} catch (JwtException e) {
+					log.error("ExpiredJwtException");
 					exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-
+					return exchange.getResponse().setComplete();
+				} catch (JwtException e) {
 					log.error("JwtException");
+					exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
 					return exchange.getResponse().setComplete();
 				}
 			}
